chore: added field 'media'
